--- a/section1.tex
+++ b/section1.tex
@@ -5,7 +5,7 @@
 \label{Parameterabhängige Probleme}
 
 \begin{bsp}[Parameterabhängige PDE]
-	Sie $\Omega \subseteq \R^d$ polygonales Gebiet. Zu Parametervektor $\mu \in \mathcal{P} \subset \R^p$ aus einer Menge $\mathcal{P}$ von "`erlaubten"' Parametern ist eine Funktion (z.\,B. "`Temperatur"') $u(\mu): \Omega \rightarrow \R$, s.\,d.:
+	Sei $\Omega \subseteq \R^d$ polygonales Gebiet. Zu Parametervektor $\mu \in \p \subset \R^p$ aus einer Menge $\p$ von "`erlaubten"' Parametern ist eine Funktion (z.\,B. "`Temperatur"') $u(\mu): \Omega \rightarrow \R$, s.\,d.:
 	\begin{align*}
 		\nabla \cdot (\kappa(\mu) \nabla u) &= q(\mu) & \text{in } \Omega \\
 		u(\mu) &= 0 & \text{auf } \delta\Omega
@@ -33,10 +33,10 @@ Weiter kann Ausgabe erwünscht, z.\,B. mittlere Temperatur
 \end{bsp}
 
 \begin{bsp}[Parametrisches stationäres System]
-Zu Parameter $\mu \in \mathcal{P} \subseteq \R^p$ ist Zustandsvektor $u(\mu) \in \R^n$ und Ausgabe $s(\mu) \in \R^k$ gesucht, s.\,d.:
+Zu Parameter $\mu \in \p \subseteq \R^p$ ist Zustandsvektor $u(\mu) \in \R^n$ und Ausgabe $s(\mu) \in \R^k$ gesucht, s.\,d.:
 \begin{align*}
 	0 &= A(\mu) \cdot u(\mu) + B(\mu) w(\mu) \\
-	s(\mu) &= l(\mu) \cdot u(\mu)
+	s(\mu) &= C(\mu) \cdot u(\mu)
 \end{align*} 
 mit parameterabhängigen Matrizen $A(\mu) \in \R^{n\times n}, B(\mu) \in \R^{n\times m}, C(\mu) \in \R^{k \times n}$ mit Eingabevektor $w \in \R^m$.
 \end{bsp}
@@ -44,7 +44,7 @@ mit parameterabhängigen Matrizen $A(\mu) \in \R^{n\times n}, B(\mu) \in \R^{n\t
 \subsubsection*{Schwache Formulierung in Hilberträumen}
 \label{Schwache Formulierung in Hilberträumen}
 
-Sie $X$ reeller Hilbertraum (reel, seperabel). Zu $\mu \in \mathcal{P}$ ist gesucht ein $u(\mu) \in X$ und $s(\mu) \in \R$
+Sei $X$ reeller Hilbertraum (reel, seperabel). Zu $\mu \in \p$ ist gesucht ein $u(\mu) \in X$ und $s(\mu) \in \R$
 \begin{align*}
 	a(u(\mu),v; \mu) &= f(v; \mu) \\
 	s(\mu) &= l(u(\mu); \mu) & \forall v \in X
@@ -73,12 +73,12 @@ In der Vorlesung werden weitere Verallgemeinerungen zu $a:X_1 \times X_2 \righta
 \label{Grundidee/Motivation}
 
 \begin{itemize}
-	\item $\mathcal{M}:= \{u(\mu) | \mu \in \mathcal{P}\} \subset X$ für $\mathcal{P} \subseteq \R^p$ ist die durch $\mu$ parametrisierte Lösungsmannigfaltigkeit.
-	\item $X$ ist im allgemeinen $\infty$-dimensional Sobolev-Raum) oder endlich- aber  sehr hochdimensional (FEM, FV, FD-Raum). $\mathcal{M}$ ist aber höchstens $p$-dimensional. \\
-	$\Rightarrow$ Motivation für Suche nach einem niedrigdimensionalen Teilraum $X_n \subseteq X$ zur Approximation von $\mathcal{M}$ und einer Approximation $u_N(\mu) \approx u(\mu), u_N(\mu) \in X_N$
+	\item $\LM:= \{u(\mu) | \mu \in \p\} \subset X$ für $\p \subseteq \R^p$ ist die durch $\mu$ parametrisierte Lösungsmannigfaltigkeit.
+	\item $X$ ist im allgemeinen $\infty$-dimensional (Sobolev-Raum) oder endlich- aber  sehr hochdimensional (FEM, FV, FD-Raum). $\LM$ ist aber höchstens $p$-dimensional. \\
+	$\Rightarrow$ Motivation für Suche nach einem niedrigdimensionalen Teilraum $X_N \subseteq X$ zur Approximation von $\LM$ und einer Approximation $u_N(\mu) \approx u(\mu), u_N(\mu) \in X_N$
 	\item Insbesondere bei Reduzierten-Basis-Methoden (RB-Methoden): \\
 	$X_N$ durch Beispiellösungen erzeugt, sog. "`Snapshots"' \\
-	$X_N \subseteq \op{span}\{u(\mu_1),...,u(\mu_n)\}$ für geeignete Parameterwerte $\mu_i \in \mathcal{P}$. \\
+	$X_N \subseteq \op{span}\{u(\mu_1),...,u(\mu_n)\}$ für geeignete Parameterwerte $\mu_i \in \p$. \\
 	Ziel ist außerdem Fehlerkontrolle durch Schranken $\Delta_N(\mu)$: \\
 	\[
 	||u(\mu) - u_N(\mu)|| \le \Delta_N(\mu)
@@ -97,10 +97,10 @@ In der Vorlesung werden weitere Verallgemeinerungen zu $a:X_1 \times X_2 \righta
 \begin{bsp}
 	Gesucht ist $u(\mu) \in C^2([0,1])$ mit 
 	\begin{align*}
-		(1 + \mu) u'' &= 1 & \text{auf} (0,1) \\
+		(1 + \mu) u'' &= 1 & \text{auf } (0,1) \\
 		u(0) &= u(1) = 1
 	\end{align*}
-	Für $\mu \in [0,1] =: \mathcal{P} \subseteq \R$. Spezielle Lösungen ("`Snapshots"')
+	Für $\mu \in [0,1] =: \p \subseteq \R$. Spezielle Lösungen ("`Snapshots"')
 	\begin{align*}
 		\mu &= 0 \Rightarrow u_0(x) = u(x; \mu = 0) = \frac{1}{2} x² - \frac{1}{2} x + 1 \\
 		\mu &= 1 \Rightarrow u_1(x) = u(x; \mu = 1) = \frac{1}{4} x² - \frac{1}{4} x + 1 \\
@@ -115,7 +115,7 @@ In der Vorlesung werden weitere Verallgemeinerungen zu $a:X_1 \times X_2 \righta
 	\[
 	 ||u_N(\mu) - u(\mu)||_{\infty} = \sup\limits_{\mu} ||u(\mu) - u_N(\mu)|| = 0
 	\]
-	ist somit exakt. $\mathcal{M}$ ist enthalten in 2-dimensionalem Unterraum $X_N$: Genauer $\alpha_0 + \alpha_1 = 1,\, 0 \le \alpha_0,\, \alpha_1 \le 1$, also ist $\mathcal{M}$ Menge der Konvexkombinationen von $u_0$, $u_1$.
+	ist somit exakt. $\LM$ ist enthalten in 2-dimensionalem Unterraum $X_N$: Genauer $\alpha_0 + \alpha_1 = 1,\, 0 \le \alpha_0,\, \alpha_1 \le 1$, also ist $\LM$ Menge der Konvexkombinationen von $u_0$, $u_1$.
 \end{bsp}
 
 \subsubsection*{Begriffe}
@@ -157,7 +157,7 @@ In der Vorlesung werden weitere Verallgemeinerungen zu $a:X_1 \times X_2 \righta
 \subsubsection*{Offline/Online Zerlegung}
 \label{Offline/Online Zerlegung}
 
-Typischerweise wird eine Verechnungsintensive Generierung des reduzierten Modells akzeptiert, sog. \emph{Offline-Phase}. Dies ermöglicht schnelle Anwendbarkeit des reduzierten Modells in der \emph{Online-Phase}. Offline-Kosten werden gerechtfertigt durch Amortisierung im multi-query-Kontext, d.\,h. Laufzeitgewinn bei genügend großer Anzahl an Online-Simulationen
+Typischerweise wird eine berechnungsintensive Generierung des reduzierten Modells akzeptiert, sog. \emph{Offline-Phase}. Dies ermöglicht schnelle Anwendbarkeit des reduzierten Modells in der \emph{Online-Phase}. Offline-Kosten werden gerechtfertigt durch Amortisierung im multi-query-Kontext, d.\,h. Laufzeitgewinn bei genügend großer Anzahl an Online-Simulationen
 
 \begin{figure}[H]
   \centering\small
