--- a/section3.tex
+++ b/section3.tex
@@ -771,7 +771,7 @@ Online-Phase:
 \[
 	\underbar f_N^q := (f^q(\phi_i))_{i=1}^N \, , \qquad 	\underbar l_N^q := (l^q(\phi_i))_{i=1}^N \in \R^N \, , \qquad q = 1,...,Q_f/Q_l
 \]
-(Online:) Zu $\mu \in \mathcal{P}$ berechne Koeffizienten $\Theta_a^q(\mu), \Theta_f^q(\mu), \Theta_l^q(\mu)$ und 
+(Online:) Zu $\mu \in \p$ berechne Koeffizienten $\Theta_a^q(\mu), \Theta_f^q(\mu), \Theta_l^q(\mu)$ und 
 \[
 	A_N (\mu) := \sum_q  \Theta_a^q(\mu) A_N^q
 \]
@@ -804,7 +804,7 @@ Dies liefert genau das diskrete System $A_N(\mu) \underbar u_N = f_N(\mu)$ aus \
 		\item Offline-Phase benötigt $\mathcal{O}(NH^2 + NH(Q_f + Q_l) + N^2HQ_a)$ für die Berechnung von $\Phi_N, f_N^q, l_N^q, A_N^q$ dominiert von der Basisgenerierung.
 		\item Online-Phase skaliert mit $\mathcal{O}(N^2Qa + N(Q_f + Q_l) + N^3)$ für Berechnung von $A_N(\mu), f_N(\mu), l_N(\mu)$ und $\underbar u_N(\mu)$ dominiert durch LGS lösen falls $Q_a, Q_f, Q_l$ klein sind. Insbesondere komplett unabhängig von $H$, wie gewünscht.
 		\item Laufzeitdiagramm
-		Seien $t_{detail}, t_{offline}, t_{online}$, die Laufzeiten für einzelne Lösungen von $(P(\mu))$, Offline-Phase bzw. Online-Phase von $(P_N(\mu))$. Unter Annahme, dass diese konstant unter Parametervariation, erhalte affin-lineare Beziehung der Gesamtlaufzeit für $k$ parameterische Lösungen
+		Seien $t_{detail}, t_{offline}, t_{online}$, die Laufzeiten für einzelne Lösungen von $\prob$, Offline-Phase bzw. Online-Phase von $(P_N(\mu))$. Unter Annahme, dass diese konstant unter Parametervariation, erhalte affin-lineare Beziehung der Gesamtlaufzeit für $k$ parameterische Lösungen
 		\[
 			t(k) := k \cdot t_{detail} \, , \qquad t_N(k) = t_{offline} + k \cdot t_{online}
 		\]
@@ -842,7 +842,7 @@ Für schnelle Berechnung der Fehlerschranken \& Effektivitätsschranken benötig
 	\item Norm $||u_N (\mu) ||_X$ der RB-Lösung für relativen Energienormfehlerschätzer $\Delta_N^{en, rel}$.
 	\item Untere/obere Schranke $\alpha_{LB}(\mu)$ bzw. $\gamma_{UB} (\mu)$ für Koerzivitäts- bzw. Stetigkeitskonstante für Fehlerschätzer bzw. Effektivitätsschranken.
 \end{itemize}
-Separierbarkeit von $(P(\mu))$ überträgt sich auf Residuum
+Separierbarkeit von $\prob$ überträgt sich auf Residuum
 
 \begin{satz}[Separierbare Parameter-Abhängigkeit für $r(\pdot;\mu)$]
 \label{3.22}
@@ -851,14 +851,14 @@ Separierbarkeit von $(P(\mu))$ überträgt sich auf Residuum
 	\[
 		(v_r^1,...,v_r^{Q_r}) := (v_f^1,...,v_f^{Q_f},v_a^{1,1},...,v_a^{Q_a,1},v_a^{1,2},...,v_a^{Q_a,2},...,v_a^{Q_a,N})
 	\]
-	Für $\mu \in \mathcal{P}$ sei $u_N = \sum_{n=1}^N u_{Nn} \phi_n$ Lösung von $(P_N(\mu))$ und hiermit definiere
+	Für $\mu \in \p$ sei $u_N = \sum_{n=1}^N u_{Nn} \phi_n$ Lösung von $(P_N(\mu))$ und hiermit definiere
 	\begin{align*}
 		(\Theta_r^1(\mu),...,\Theta_r^{Q_r}(\mu)) := (\Theta_f^1(\mu),...,\Theta_f^{Q_f}(\mu),-\Theta_a^{1}(\mu),...,-\Theta_a^{Q_a}(\mu)u_{N1},-\Theta_a^{1}(\mu)u_{N2},... \\
 		...,-\Theta_a^{Q_a}(\mu)u_{N2},...,-\Theta_a^{Q_a}(\mu)u_{NN})
 	\end{align*}
 	Mit $r^q(\pdot) := \dotp{v_r^q}{ \pdot} \in X', \, q = 1,...,Q_r$ sind $r(\pdot;\mu)$ und $v_r(\mu)$ separierbar parametrisch via
 	\[
-		r(\pdot;\mu) = \sum_{q=1}^{Q_r} \Theta_r^{q}(\mu) \cdot r^q(\pdot), \qquad v_r(\mu) = \sum_{q=1}^{Q_r} \Theta_r^{q}(\mu) \cdot v_r^q \qquad \forall \mu \in \mathcal{P}
+		r(\pdot;\mu) = \sum_{q=1}^{Q_r} \Theta_r^{q}(\mu) \cdot r^q(\pdot), \qquad v_r(\mu) = \sum_{q=1}^{Q_r} \Theta_r^{q}(\mu) \cdot v_r^q \qquad \forall \mu \in \p
 	\]
 \end{satz}
 
@@ -897,7 +897,7 @@ Offensichtlich Berechnung von Riesz-Repräsentant notwendig, dies geschieht durc
 \begin{kor}[Offline-/Online- für Residuen-Norm]
 \label{3.24}
 	(Offline:) Nach Offline von $(P_N(\mu))$ gemäß \ref{3.21} def. $G_r := (r^q (v_r^{q'}))_{q,q' =1}^{Q_r} \in \R^{Q_r \times Q_r}$ mittels Residuen-Komponenten $r^q$ und Riesz-Repr. $v_r^q$ aus \ref{3.22}
-	(Online:) Für $\mu \in \mathcal{P}$ und RB-Lösung $\underbar u_N \in \R^N$ berechne Residuen-Koeff-Vektor $\underline{\Theta}_r(\mu) = (\Theta_r^1(\mu),...,\Theta_r^{Q_r} (\mu))^T \, \in \R^{Q_r}$.
+	(Online:) Für $\mu \in \p$ und RB-Lösung $\underbar u_N \in \R^N$ berechne Residuen-Koeff-Vektor $\underline{\Theta}_r(\mu) = (\Theta_r^1(\mu),...,\Theta_r^{Q_r} (\mu))^T \, \in \R^{Q_r}$.
 	Dann gilt: 
 	\begin{align}
 	||v_r(\mu)||_X = ||r(\pdot;\mu)||_X = \sqrt{\underline{\Theta}_r(\mu)^T \cdot G_r \underline{\Theta}_r(\mu)}
@@ -922,7 +922,7 @@ Offensichtlich Berechnung von Riesz-Repräsentant notwendig, dies geschieht durc
 		\dotp{v_l^q}{v} = l^q(v) \qquad \forall v \in X, \, q=1,...,Q_l
 	\]
 	und def. $G_l := (l^q(v_l^{q'})_{q, q' =1}^{Q_l}$
-	(Online:) Zu $\mu \in \mathcal{P}$ berechne $\underline{\Theta}_l (\mu) := (\Theta_l^1(\mu),...,\Theta_l^{Q_l}(\mu))$ und $||l(\pdot;\mu)||_{X'} = \sqrt{\underline{\Theta}_l^T G_l \underline{\Theta}_l}$
+	(Online:) Zu $\mu \in \p$ berechne $\underline{\Theta}_l (\mu) := (\Theta_l^1(\mu),...,\Theta_l^{Q_l}(\mu))$ und $||l(\pdot;\mu)||_{X'} = \sqrt{\underline{\Theta}_l^T G_l \underline{\Theta}_l}$
 \end{kor}
 
 \begin{proof}
@@ -934,7 +934,7 @@ Offensichtlich Berechnung von Riesz-Repräsentant notwendig, dies geschieht durc
 	\[
 		K_N := (\dotp{\phi_i}{\phi_j})_{i,j=1}^N \, \in \R^{N \times N}
 	\]
-	(Online:) Zu $\mu \in \mathcal{P}$ berechne $A_N(\mu)$ und $\underbar u_N(\mu)$ durch Online-Phase von $(P_N(\mu))$
+	(Online:) Zu $\mu \in \p$ berechne $A_N(\mu)$ und $\underbar u_N(\mu)$ durch Online-Phase von $(P_N(\mu))$
 	\[
 		|| u_N(\mu)||_X = \sqrt{\underbar u_N^T \, K_N \, \underbar u_N}
 	\]
@@ -960,8 +960,8 @@ In gewissen Fällen kann eine größere und damit bessere Schranke angegeben wer
 
 \begin{satz}[``Min-$\Theta$-Verfahren'' zur Berechnung von $\alpha_{LB}(\mu)$] \label{3.27}
 	Seien $a^q(u,u) \geq 0 \,\, \forall q,u$ und $\Theta_a^q (\mu) > 0 \,\, \forall \mu$ \\
-	(Offline:) Sei $\alpha(\bar{\mu})$ für ein $\bar{\mu} \in \mathcal{P}$ verfügbar \\
-	(Online:) Setze für $\mu \in \mathcal{P}$
+	(Offline:) Sei $\alpha(\bar{\mu})$ für ein $\bar{\mu} \in \p$ verfügbar \\
+	(Online:) Setze für $\mu \in \p$
 	\[
 		\alpha_{LB} (\mu) := \alpha(\bar{\mu}) \cdot \min_{q} \frac{\Theta_a^q(\mu)}{\Theta_a^q(\bar{\mu})}
 	\]
@@ -993,7 +993,7 @@ In gewissen Fällen kann eine größere und damit bessere Schranke angegeben wer
 	\end{itemize}
 \end{bem}
 
-\begin{satz}[Berechnung von $\alpha(\mu)$ für $(P(\mu))$]
+\begin{satz}[Berechnung von $\alpha(\mu)$ für $\prob$]
 	Seien $A(\mu), \, K \in \R^{H \times H}$ wie in \ref{3.19}/\ref{3.20}. \\
 	Setze $A_s(\mu) := \frac{1}{2} (A(\mu) + A(\mu)^T)$. Dann gilt
 	\[
@@ -1020,15 +1020,15 @@ In gewissen Fällen kann eine größere und damit bessere Schranke angegeben wer
 \begin{bem} \beginwithlistbem
 	\begin{itemize}
 		\item Inversion von $K$ muss verhindert werden. Daher verwende EW-Löser, welcher nur Matrix-Vektor-Multiplikation verwendet. Sobald ein Produkt $y=K^{-1}A_s x$ erforderlich ist, löst man das System $Ky = A_s x$. Alternativ kann auch kleinster EW eines verallgemeinerten EWP $A_s \underbar u = \lambda K \underbar u$ berechnet werden.
-		\item Für variationelle Form des verallg. EWP für $\infty$-dim $(P(\mu))$ siehe Patera \& Rozza
+		\item Für variationelle Form des verallg. EWP für $\infty$-dim $\prob$ siehe Patera \& Rozza
 		\item Für Probleme, bei denen die Voraussetzungen von Min-$\Theta$ nicht erfüllt sind, kann ``Successive Constraint Method'' (SCM) eine Alternative darstellen.  $\leadsto$ §\ref{sec-4}
 	\end{itemize}
 \end{bem}
 
 \begin{satz}[``Max-$\Theta$''-Verfahren für $\gamma_{UB}(\mu)$, symmetrisches $a(\pdot , \pdot)$]
 	Sei $a$ symmetrisch, koerziv, separierbar parametrisch mit $a^q$ positiv semidefinit und $\Theta_a^q > 0 \, \, \forall q,u$ \\
-	(Offline:) Sei $\bar{\mu} \in \mathcal{P}$ und $\gamma(\bar{\mu})$ berechnet \\
-	(Online:) Setze für $\mu \in \mathcal{P}: \gamma_{UB}(\mu) := \gamma(\bar{\mu}) \max\limits_q \frac{\Theta_a^q(\mu)}{\Theta_a^q(\bar{\mu})}$. Dann gilt 
+	(Offline:) Sei $\bar{\mu} \in \p$ und $\gamma(\bar{\mu})$ berechnet \\
+	(Online:) Setze für $\mu \in \p: \gamma_{UB}(\mu) := \gamma(\bar{\mu}) \max\limits_q \frac{\Theta_a^q(\mu)}{\Theta_a^q(\bar{\mu})}$. Dann gilt 
 	\[
 		\gamma(\mu) \leq \gamma_{UB} (\mu) < \infty
 	\]
@@ -1055,47 +1055,47 @@ In gewissen Fällen kann eine größere und damit bessere Schranke angegeben wer
 	\item Probleme (\ref{eq:3.7}), (\ref{eq:3.8}) stellen schwierige nichtlineare Optimierungsprobleme dar. Um zu praktischer Basisgenerierung zu kommen, werden verschiedene Vereinfachungen gemacht:
 	\begin{itemize}
 		\item ``Snapshotbasierte'' Räume: Statt $Y \subset X$ beliebig, wird $Y = \op{span}\{u(\mu^i)\}_{i=1}^N$ mit unbekanntem $\{\mu^i\}_{i=1}^N$ gesucht. 
-		\item ``Diskretisierung des Parameterraumes''. Statt $\mu \in \mathcal{P}$ wird Maximum bzw. Mittelung nur über $\mu \in \mathcal{S}_{train}$ durchgeführt, wobei $\mathcal{S}_{train} = \{\mu^i\}_{i=1}^n \subset \mathcal{P}$ \emph{endliche} Menge von Trainingsparametern $\mu$ (z.\,B. Punkte eines äquidistanten Gitters oder zufällig gewählte Parameter oder mittels adaptiven Verfahren gewählt.
+		\item ``Diskretisierung des Parameterraumes''. Statt $\mu \in \p$ wird Maximum bzw. Mittelung nur über $\mu \in \mathcal{S}_{train}$ durchgeführt, wobei $\mathcal{S}_{train} = \{\mu^i\}_{i=1}^n \subset \p$ \emph{endliche} Menge von Trainingsparametern $\mu$ (z.\,B. Punkte eines äquidistanten Gitters oder zufällig gewählte Parameter oder mittels adaptiven Verfahren gewählt.
 		\item Statt eines Fehlermaßes, welches echte Lösung $u(\mu)$ erfordert, wird häufig ein Fehlerschätzer gewählt, welcher sehr viel schneller auswertbar ist.
 		\item Das resultierende vereinfachte Optimierungsproblem kann approximativ minimiert werden, indem statt simultan über $\{\mu^i\}_{i=1}^N$ zu optimieren, einzelne Basisvektoren der Reihe nach durch Optimierung bestimmt werden (``Greedy-Verfahren'')
 	\end{itemize}
 \end{itemize}
 
 \begin{defn}[Kolmogorov $n$-Weite]
-Sei $\mathcal{M} \subseteq X$ kompakte Teilmenge. Zu einem abgeschlossenen Unterraum $Y \subseteq X$ nennen wir
+Sei $\LM \subseteq X$ kompakte Teilmenge. Zu einem abgeschlossenen Unterraum $Y \subseteq X$ nennen wir
 \[
-	d(Y,\mathcal{M}) := \sup_{v \in \mathcal{M}} \inf_{w \in Y} ||v-w|| = \sup_{v \in \mathcal{M}} ||v-P_Yv||
+	d(Y,\LM) := \sup_{v \in \LM} \inf_{w \in Y} ||v-w|| = \sup_{v \in \LM} ||v-P_Yv||
 \]
-den \emph{Abstand} von $Y$ zu $\mathcal{M}$. Für $n \in N$ nennen wir
+den \emph{Abstand} von $Y$ zu $\LM$. Für $n \in N$ nennen wir
 \[
-	d_n(\mathcal{M}) := \inf_{Y \subset X , \dim(Y) = n} d(Y,\mathcal{M})
+	d_n(\LM) := \inf_{Y \subset X , \dim(Y) = n} d(Y,\LM)
 \]
-die \emph{Kolmogorov $n$-Weite} der Menge $\mathcal{M}$. Als Abschwächung definieren wir
+die \emph{Kolmogorov $n$-Weite} der Menge $\LM$. Als Abschwächung definieren wir
 \[
-	\bar{d}_n(\mathcal{M}) := \inf_{Y \subset \op{span}(\mathcal{M}), \dim(Y)=n} d(Y,\mathcal{M}) .
+	\bar{d}_n(\LM) := \inf_{Y \subset \op{span}(\LM), \dim(Y)=n} d(Y,\LM) .
 \]
 \end{defn}
 
 \begin{bem} \beginwithlistbem
 	\begin{itemize}
 		\item $d_n$, $\bar{d}_n$ fallen monoton.
-		\item $d_n$, $\bar{d}_n$ sind rein approximationstheoretische Maße, deren Abfall die Approximierbarkeit von $\mathcal{M}$ mit linearen Unterräumen charakterisiert, unabhängig von der RB-Approximation
-		\item Wenn wir für ein $(\mathcal{P}(\mu))$ Konvergenz oder sogar Konvergenzrate von $d_n(\mathcal{M})$ zeigen können, so erhalten wir ebenso Konvergenz mit mind derselben Rate via Céa \ref{3.9} für die RB-Approximation
+		\item $d_n$, $\bar{d}_n$ sind rein approximationstheoretische Maße, deren Abfall die Approximierbarkeit von $\LM$ mit linearen Unterräumen charakterisiert, unabhängig von der RB-Approximation
+		\item Wenn wir für ein $(\p(\mu))$ Konvergenz oder sogar Konvergenzrate von $d_n(\LM)$ zeigen können, so erhalten wir ebenso Konvergenz mit mind derselben Rate via Céa \ref{3.9} für die RB-Approximation
 		\[
-			|| u(\mu) - u_N(\mu) || \leq \frac{\gamma(\mu)}{\alpha(\mu)} \underbrace{\inf_{v \in X_N} || u(\mu) - v ||}_{d(X_N,\mathcal{M})} \leq \frac{\bar{\gamma}}{\bar{\alpha}} d_n(\mathcal{M})
+			|| u(\mu) - u_N(\mu) || \leq \frac{\gamma(\mu)}{\alpha(\mu)} \underbrace{\inf_{v \in X_N} || u(\mu) - v ||}_{d(X_N,\LM)} \leq \frac{\bar{\gamma}}{\bar{\alpha}} d_n(\LM)
 		\]
 		\item Beziehung $d_n$ zu $\bar{d}_n$. Es gilt trivialerweise
 		\[
-			d_0(\mathcal{M}) = \bar{d}_0(\mathcal{M}) = d(0,\mathcal{M}) = \sup_{v \in \mathcal{M}} ||v||,
+			d_0(\LM) = \bar{d}_0(\LM) = d(0,\LM) = \sup_{v \in \LM} ||v||,
 		\]
 		\[
-			d_n(\mathcal{M}) \leq \bar{d}_n(\mathcal{M}) \qquad \forall n \in \N,
+			d_n(\LM) \leq \bar{d}_n(\LM) \qquad \forall n \in \N,
 		\]
-		falls $n_0 := \dim(\op{span}(\mathcal{M})) < \infty, \,\, d_n(\mathcal{M}) = \bar{d}_n(\mathcal{M}) = 0 \,\, \forall n \geq n_0$
+		falls $n_0 := \dim(\op{span}(\LM)) < \infty, \,\, d_n(\LM) = \bar{d}_n(\LM) = 0 \,\, \forall n \geq n_0$
 		\item Präzise Werte für $d_n$ sind selten bekannt. Für endliche Menge oder Einheitskugeln können aber exakte Werte der Schranken für $d_n$ angegeben werden.
-		\item Beispiel: $\mathcal{M} := \{v \in X|||v|| \leq 1\}$ erfüllt $d_n(\mathcal{M}) = \bar{d}_n(\mathcal{M}) = 1$ für alle $n < \dim(X)$ und $d_n(\mathcal{M}) = \bar{d}_n(\mathcal{M}) = 0$ für $n \geq \dim(X)$.
-		\item Beispiel: $\mathcal{M} := [−1, 1]^m \subset X := R^m$ erfüllt $d_n(\mathcal{M}) = \bar{d}_n(\mathcal{M}) = \sqrt{m−n}$ für alle $n \leq m$ und $d_n(\mathcal{M}) = \bar{d}_n(\mathcal{M}) = 0$ für $n \geq m$.
-		\item Beispiel: ``Müsli-Schachtel'': $\mathcal{M}:=\prod_{i \in \N} [-2^i,2^i] \subseteq l_2 \Rightarrow d_n(\mathcal{M}) \leq C \cdot 2^{-n}$, exponentielle Konvergenz
+		\item Beispiel: $\LM := \{v \in X|||v|| \leq 1\}$ erfüllt $d_n(\LM) = \bar{d}_n(\LM) = 1$ für alle $n < \dim(X)$ und $d_n(\LM) = \bar{d}_n(\LM) = 0$ für $n \geq \dim(X)$.
+		\item Beispiel: $\LM := [−1, 1]^m \subset X := R^m$ erfüllt $d_n(\LM) = \bar{d}_n(\LM) = \sqrt{m−n}$ für alle $n \leq m$ und $d_n(\LM) = \bar{d}_n(\LM) = 0$ für $n \geq m$.
+		\item Beispiel: ``Müsli-Schachtel'': $\LM:=\prod_{i \in \N} [-2^i,2^i] \subseteq l_2 \Rightarrow d_n(\LM) \leq C \cdot 2^{-n}$, exponentielle Konvergenz
 	\end{itemize}
 \end{bem}
 
@@ -1172,7 +1172,7 @@ Wir haben bereits gesehen, dass in bestimmten Fällen fehlerfreie Approximation 
 \begin{satz}[Optimales $X_N$ für Thermischer Block, $B_1 = 1$]
 Sie $p \in \N, \, B_1=1, \, B_2 = p, \, \mu^i := (\mu_{min},\dots,\mu_{min})^T + e_i \cdot (\mu_{max} - \mu_{min}), i=1,\dots,p$. Dann ist $X_N := \op{span}(u(\mu^i))_{i=1}^p$ optimal in dem Sinne, dass
 \[
-	\inf_{v \in X_N} ||u(\mu) - v|| = \inf_{v \in X_N} ||u(\mu) - v||_{\mu} = 0 \qquad \forall \mu \in \mathcal{P}
+	\inf_{v \in X_N} ||u(\mu) - v|| = \inf_{v \in X_N} ||u(\mu) - v||_{\mu} = 0 \qquad \forall \mu \in \p
 \] 
 \end{satz}
 
@@ -1463,7 +1463,7 @@ $g(\hat{\mu}, \lambda_i)$ sind gemäß \ref{3.38} Koeffizienten für $\hat{u}(\h
 
 \begin{lemma}[Darstellung von Fkt. aus $X_N$]
 \label{3.41}
-Für Koeffizientenfunktionen $\tilde{C_n}: \hat{\mathcal{P}} \rightarrow \R, \, n=1,\dots,N$
+Für Koeffizientenfunktionen $\tilde{C_n}: \hat{\p} \rightarrow \R, \, n=1,\dots,N$
 \[
 	\hat{w}_N(\hat{\mu}):= \sum\limits_{n=1}^N \tilde{C_n} (\hat{\mu})\hat{u}(\hat{\mu}^n)
 \]
@@ -1485,9 +1485,9 @@ wobei $\tilde{g}_N(\hat{\mu}, \sigma) := \sum\limits_{n=1}^N \tilde{C}_n(\hat{\m
 \end{proof}
 \end{lemma}
 
-Wir benötigen noch Lagrange-Interpolation in M aufeinanderfolgenden Punkten $\{\hat{\mu}^i,\dots,\hat{\mu}^{i+M-1}\}$: Sie $h \in C^M(\hat{\mathcal{P}})$ zu interpolierende Funktion. Es bezeichne $I_M^i : C^0 (\hat{\mathcal{P}}) \rightarrow P_{M-1}(\hat{\mathcal{P}})$ Polynominterpolation zu $\{\hat{\mu^{i+m-1}}_{m=1}^M\}$ für $M \geq 2$ und $i \in \{1,\dots,N\}$ s.\,d. $i+M \leq N+1$.
+Wir benötigen noch Lagrange-Interpolation in M aufeinanderfolgenden Punkten $\{\hat{\mu}^i,\dots,\hat{\mu}^{i+M-1}\}$: Sie $h \in C^M(\hat{\p})$ zu interpolierende Funktion. Es bezeichne $I_M^i : C^0 (\hat{\p}) \rightarrow P_{M-1}(\hat{\p})$ Polynominterpolation zu $\{\hat{\mu^{i+m-1}}_{m=1}^M\}$ für $M \geq 2$ und $i \in \{1,\dots,N\}$ s.\,d. $i+M \leq N+1$.
 
-Sei $L_M^{i;m} \in P_{M-1}(\hat{\mathcal{P}})$ Lagrange-Polynom zu den Stützstellen, d.\,h.
+Sei $L_M^{i;m} \in P_{M-1}(\hat{\p})$ Lagrange-Polynom zu den Stützstellen, d.\,h.
 \[
 	L_M^{i;m}(\hat{\mu}^{i+m'-1}) = \delta_{m m'} \qquad \text{für} \,\,\, 1 \leq m, m' \leq M
 \]
@@ -1512,7 +1512,7 @@ Denn dann folgt Behauptung via $||\hat{u}(\hat{\mu})||_{\mu} = || u(\mu) ||_{\mu
 \[
 	|| u(\mu) - u_N(\mu) ||_{\mu} = \inf_{v \in X_N} || u(\mu) - v ||_{\mu} \leq || u(\mu) - \hat{w}_N(\hat{\mu}) ||_{\mu} = || \hat{u}(\hat{\mu}) - \hat{w}_N(\hat{\mu}) ||_{\mu}
 \]
-Für Konstruktion eines $\hat{w}_N(\hat{\mu})$ reicht es, die Koeffizienten $\tilde{C}_n(\hat{\mu})$ zu definieren (siehe \ref{3.41}): Sei $\hat{\mu} \in \mathcal{P}$ gegeben und $M \in \{2,\dots,N\}$ wähle $i$ s.\,d. $\hat{\mu} \in [\hat{\mu}^2,\hat{\mu}^{i+M-1}] =: J_M^i$, also $|J_M^i| = (M-1) d_N$
+Für Konstruktion eines $\hat{w}_N(\hat{\mu})$ reicht es, die Koeffizienten $\tilde{C}_n(\hat{\mu})$ zu definieren (siehe \ref{3.41}): Sei $\hat{\mu} \in \p$ gegeben und $M \in \{2,\dots,N\}$ wähle $i$ s.\,d. $\hat{\mu} \in [\hat{\mu}^2,\hat{\mu}^{i+M-1}] =: J_M^i$, also $|J_M^i| = (M-1) d_N$
 
 Definiere nun $\tilde{C}_n$ durch Lagrange-Polynome zu $\{\hat{\mu}^{i+m-1}\}_{m=1}^M$:
 \[
@@ -1896,7 +1896,7 @@ mit $\lambda_i$ EW von $R$.
 \subsubsection*{Greedy-Verfahren}
 
 \begin{defn}[Greedy-Verfahren]
-	Sei $S_{train} \subset \mathcal{P}$ ``Trainingsmenge'' von Parametern, $\Delta (Y,\mu) \in \R^+$ für Teilräume $Y \subset X$ und Parameter $\mu \in \mathcal{P}$ ein ``Fehlerindikator'' und $\epsilon_{tol} > 0$ eine Fehlertoleranz. Die Greedy-Basen $\Phi_{GRE,m}$, Greedy-Raum $X_{GRE,m}$ und Sample-Menge $S_m$ für $m=0,\dots,N$ sind iterativ definiert durch
+	Sei $S_{train} \subset \p$ ``Trainingsmenge'' von Parametern, $\Delta (Y,\mu) \in \R^+$ für Teilräume $Y \subset X$ und Parameter $\mu \in \p$ ein ``Fehlerindikator'' und $\epsilon_{tol} > 0$ eine Fehlertoleranz. Die Greedy-Basen $\Phi_{GRE,m}$, Greedy-Raum $X_{GRE,m}$ und Sample-Menge $S_m$ für $m=0,\dots,N$ sind iterativ definiert durch
 	\[
 		S_0 = \emptyset \,\, , \,\, X_{GRE,0} = \{0\} \,\, , \,\, \Phi_{GRE,0} = \emptyset \,\, , \,\, m:=0
 	\]
@@ -1904,7 +1904,7 @@ Solange $\epsilon_m := \max\limits_{\mu \in S_{train}} \Delta(X_{GRE,m},\mu) > \
 \begin{align*}
 	\mu^{(m+1)} &:= \op{max arg}\limits_{\mu \in S_{train}} \Delta(X_{GRE,m},\mu) \\
 	S_{m+1} &:= S_m \cup \{\mu^{(m+1)}\} \\
-	\phi_{m+1} &:= u(\mu^{(m+1)} \text{ Lösung von } (P(\mu^{(m+1)})) \\
+	\phi_{m+1} &:= u(\mu^{(m+1)} \text{ Lösung von } \prob[\mu^{(m+1)}] \\
 	\Phi_{GRE,m+1} &:= \Phi_{GRE,m} \cup \{\phi_{m+1}\} \\
 	X_{GRE,m+1} &:= X_{GRE,m} + \op{span}(\phi_{m+1}) \\
 	m \leftarrow m+1
@@ -1918,22 +1918,22 @@ setze schließlich $N:=m$
 		\item $\Phi_{GRE,m}$ ist Lagrange-RB zur Sample-Menge $S_m$, i. a. nicht orthonormal. Kann für numerische Stabilität mit Gram-Schmidt orthonormalisiert werden.
 		\item Basen sind hierarchisch: $\Phi_{GRE,m} \subset \Phi_{GRE,m'}$, $m \leq m'$
 		\item In Literatur wird Suche nach $\mu^{(1)}$ häufig umgangen, indem dieses beliebig aus $S_{train}$ gewählt wird.
-		\item $S_{train}$ wird häufig als strukturierte oder zufällige Menge aus $\mathcal{P}$ mit \emph{endlich} vielen Samples gewählt.
+		\item $S_{train}$ wird häufig als strukturierte oder zufällige Menge aus $\p$ mit \emph{endlich} vielen Samples gewählt.
 		\item Falls $S_{train}$ zu klein, kann das RB-Modell overfitting aufweisen, d.\,h.
 		\[
-			\sup\limits_{\mu \in \mathcal{P}} || u(\mu) - u_N(\mu) || >> \sup\limits_{\mu \in S_{train}} || u(\mu) - u_N(\mu) ||
+			\sup\limits_{\mu \in \p} || u(\mu) - u_N(\mu) || >> \sup\limits_{\mu \in S_{train}} || u(\mu) - u_N(\mu) ||
 		\]
 		\item Greedy-Verfahren ist also akkummulatives Verfahren, welches iterativ den ``schlechtest''-aufgelösten Parameter $\mu^{(m+1)}$ wählt, $u(\mu^{(m+1)}$ berechnet, und als neuen Basisvektor hinzufügt. Insofern kann dies als approximative Lösung des Optimierungsproblems
 		\[
-			\min\limits_{\substack{Y \subset X \\ \dim Y = N}} \max\limits_{\mu \in \mathcal{P}} \Delta (Y,\mu)
+			\min\limits_{\substack{Y \subset X \\ \dim Y = N}} \max\limits_{\mu \in \p} \Delta (Y,\mu)
 		\]
-	interpretiert werden: Statt maximieren über $\mathcal{P} \leadsto	$ maximieren über $S_{train}$, statt minimieren über $X \subset X \leadsto$ iterative Sequenz von Räumen $Y = X_{GRE,m}$.
+	interpretiert werden: Statt maximieren über $\p \leadsto	$ maximieren über $S_{train}$, statt minimieren über $X \subset X \leadsto$ iterative Sequenz von Räumen $Y = X_{GRE,m}$.
 	\end{itemize}
 \end{bem}
 
 \begin{lemma}[Fehlerindikatoren, Terminieren des Verfahrens] \beginwithlist
 \begin{enumerate}
-	\item Falls  $|S_{train}| = n < \infty$ und für alle $\mu \in \mathcal{P}$ und $Y \subset X$ gilt
+	\item Falls  $|S_{train}| = n < \infty$ und für alle $\mu \in \p$ und $Y \subset X$ gilt
 	\[
 		u(\mu) \in Y \,\, \Rightarrow \,\, \Delta(Y,\mu) = 0
 	\]
@@ -1970,7 +1970,7 @@ setze schließlich $N:=m$
 
 \begin{bem}[Wahl der Fehlerindikatoren] \beginwithlistbem
 	\begin{itemize}
-		\item Greedy-Verfahren hervorragendes Einsatzfeld für Fehlerschätzer, denn $\Delta_N(\mu)$ kann sehr schnell für alle $\mu \in S_{train}$ ausgerechnet werden, ohne dass alle $u(\mu)$, $\mu \in S_{train}$ berechnet werden müssen (im Gegensatz zu POD). Dadurch können sehr große Mengen $S_{train}$ behandelt werden. Dies erhöht die Erwartung, dass $\Phi_{GRE,N}$ auch für neue Parameter $\mu \in \mathcal{P} \backslash S_{train}$ eine gute Approximation liefert.
+		\item Greedy-Verfahren hervorragendes Einsatzfeld für Fehlerschätzer, denn $\Delta_N(\mu)$ kann sehr schnell für alle $\mu \in S_{train}$ ausgerechnet werden, ohne dass alle $u(\mu)$, $\mu \in S_{train}$ berechnet werden müssen (im Gegensatz zu POD). Dadurch können sehr große Mengen $S_{train}$ behandelt werden. Dies erhöht die Erwartung, dass $\Phi_{GRE,N}$ auch für neue Parameter $\mu \in \p \backslash S_{train}$ eine gute Approximation liefert.
 		\item Wahl: $\Delta(Y,\mu) := ||u(\mu) - P_y u(\mu)||$, orthogonaler Projektionsfehler
 		
 		Motivation: Falls dies klein, so ist mit Céa auch RB-Fehler klein
@@ -2002,7 +2002,7 @@ setze schließlich $N:=m$
 \end{bem}
 
 \begin{bem}[Bestimmung der Approximationsgüte/Overfitting]
-In Terminologie der Statistik/Maschinellen Lernens ist $S_{train}$ eine \emph{Trainingsmenge} und $\epsilon_N$ aus Greedy-Verfahren der sogenannten \emph{Trainingsfehler}. $S_{train}$ muss $\mathcal{P}$ gut repräsentieren, sollte möglichst groß gewählt werden. Falls $S_{train}$ zu klein, oder unrepräsentativ für $\mathcal{P}$ kann Overfitting auftreten.
+In Terminologie der Statistik/Maschinellen Lernens ist $S_{train}$ eine \emph{Trainingsmenge} und $\epsilon_N$ aus Greedy-Verfahren der sogenannten \emph{Trainingsfehler}. $S_{train}$ muss $\p$ gut repräsentieren, sollte möglichst groß gewählt werden. Falls $S_{train}$ zu klein, oder unrepräsentativ für $\p$ kann Overfitting auftreten.
 
 Somit ist kleiner Trainingsfehler nicht hinreichend für gutes Modell. Modelle sollen daher nicht alleine anhand von Trainings-, sondern anhand unabhängiger Testmengen:
 \[
@@ -2040,11 +2040,11 @@ Das Greedy-Verfahren erzeugt monoton fallende Sequenzen $(\epsilon_n)_{n\geq 1}$
 \begin{bem}[Konvergenz des Greedy-Verfahrens] \beginwithlistbem
 	\begin{itemize}
 		\item Einige Jahre lang war Greedy-Verfahren ein in der Praxis gut funktionierendes Verfahren, jedoch ohne theoretische Erklärung wann/warum es funktioniert.
-		\item Notwendiges Kriterium für Erfolg des Greedy-Verfahren: Kolmogorov $n$-Weite von $\mathcal{M}$ muss (schnell) abfallen. Sei $\Delta(Y,\mu)$ so gewählt, dass $\Delta(Y,\mu) \geq || u(\mu - P_yu(\mu)||$
+		\item Notwendiges Kriterium für Erfolg des Greedy-Verfahren: Kolmogorov $n$-Weite von $\LM$ muss (schnell) abfallen. Sei $\Delta(Y,\mu)$ so gewählt, dass $\Delta(Y,\mu) \geq || u(\mu - P_yu(\mu)||$
 		\begin{align*}
-			&\Rightarrow \sup\limits_{\mu \in \mathcal{P}} \Delta(Y,\mu) \geq \inf\limits_{\substack{Y \subset X \\ \dim Y = n}} \sup\limits_{\mu \in \mathcal{P}} ||u(\mu) - P_yu(\mu)|| = d_n(\mathcal{M}) \\
+			&\Rightarrow \sup\limits_{\mu \in \p} \Delta(Y,\mu) \geq \inf\limits_{\substack{Y \subset X \\ \dim Y = n}} \sup\limits_{\mu \in \p} ||u(\mu) - P_yu(\mu)|| = d_n(\LM) \\
 		\end{align*}
-		$\Rightarrow$ Falls $\Phi_{GRE,n}$ gut, muss $d_n(\mathcal{M})$ klein sein. Falls $d_n(\mathcal{M})$ nicht klein, kann $\Phi_{GRE,n}$ keine gute Approximation liefern.
+		$\Rightarrow$ Falls $\Phi_{GRE,n}$ gut, muss $d_n(\LM)$ klein sein. Falls $d_n(\LM)$ nicht klein, kann $\Phi_{GRE,n}$ keine gute Approximation liefern.
 		
 		\item Spannend ist umgekehrte Frage, ob abfallendes $d_n$ auch hinreichend für Gelingen des Greedy-Verfahrens.
 		\item Antwort auf diese Fragen wurden in letzten Jahren gegeben:
@@ -2056,26 +2056,26 @@ Das Greedy-Verfahren erzeugt monoton fallende Sequenzen $(\epsilon_n)_{n\geq 1}$
 		(BCDDPW): Binev, Cohen, Dahmen, DeVore, Petrova, Wojtaszczyk: Convergence Rates for Greedy Algorithms in Reduced Basis Methods
 		
 		SIAM J. Math. Anal., 43(3), 1455..., 2011.
-		\item Die Hoffnung, ein Ergebnis der Form $\epsilon_n \leq c d_1(\mathcal{M})$ zu erhalten kann (ohne weitere Annahme) leider nicht erreicht werden. Dies sieht man durch Vergleich von
+		\item Die Hoffnung, ein Ergebnis der Form $\epsilon_n \leq c d_1(\LM)$ zu erhalten kann (ohne weitere Annahme) leider nicht erreicht werden. Dies sieht man durch Vergleich von
 		\[
-			\bar{d}_n(\mathcal{M}) = \inf\limits_{\substack{Y \subset \op{span}(\mathcal{M}) \\ \dim Y = n}} d(Y,\mathcal{M}) \qquad \text{und} \qquad d_n(\mathcal{M})
+			\bar{d}_n(\LM) = \inf\limits_{\substack{Y \subset \op{span}(\LM) \\ \dim Y = n}} d(Y,\LM) \qquad \text{und} \qquad d_n(\LM)
 		\]
 		Theorem 4.1 in (BCDDPW2011) besagt:
 		\begin{enumerate}
-			\item Für jedes $\mathcal{M}$ und $n \geq 0$ gilt $\bar{d}_n(\mathcal{M}) \leq (n+1) d_n(\mathcal{M})$
-			\item Für jedes $n > 0$ und $\epsilon > 0$ existiert $\mathcal{M}$, s.\,d.
+			\item Für jedes $\LM$ und $n \geq 0$ gilt $\bar{d}_n(\LM) \leq (n+1) d_n(\LM)$
+			\item Für jedes $n > 0$ und $\epsilon > 0$ existiert $\LM$, s.\,d.
 			\[
-				\bar{d}_n(\mathcal{M}) \geq (n-1-\epsilon)d_n(\mathcal{M})
+				\bar{d}_n(\LM) \geq (n-1-\epsilon)d_n(\LM)
 			\]
 			\end{enumerate}
-		Wegen $\epsilon_n \geq \bar{d}_n(\mathcal{M})$ und ii) ist ``direkter Vergleich'' von $\epsilon_n$ und $d_n(\mathcal{M})$ mit $C$ unabhängig von $n$ nicht möglich.
+		Wegen $\epsilon_n \geq \bar{d}_n(\LM)$ und ii) ist ``direkter Vergleich'' von $\epsilon_n$ und $d_n(\LM)$ mit $C$ unabhängig von $n$ nicht möglich.
 		\item Lösung ist zusätzliche Annahmen von Raten des Abfalls von $d_n$, damit können ähnliche Abfallraten für $\epsilon_n$ gezeigt werden, z.\,B. zeigen (BMPPT2012):
 		
-		Für $S_{train} = \mathcal{P}$ und $\Delta(Y,\mu) = ||u(\mu) - P_yu(\mu)||$:
+		Für $S_{train} = \p$ und $\Delta(Y,\mu) = ||u(\mu) - P_yu(\mu)||$:
 		\[
-			\epsilon_n \leq 2^{n+1}(n+1) d_n(\mathcal{M})
+			\epsilon_n \leq 2^{n+1}(n+1) d_n(\LM)
 		\]
-		Falls $d_n$ schnell genug abfällt (z.\,B. exponentiell $d_n(\mathcal{M}) \leq C \cdot e^{-\alpha n})$ so folgt dann auch exponentieller Abfall von $\epsilon_n$ (mit anderem $\alpha$)
+		Falls $d_n$ schnell genug abfällt (z.\,B. exponentiell $d_n(\LM) \leq C \cdot e^{-\alpha n})$ so folgt dann auch exponentieller Abfall von $\epsilon_n$ (mit anderem $\alpha$)
 		\item Ein verbessertes Ergebnis (ohne Faktor $(n+1)$) und ein Ergebnis für Fall algebraischer (polynomiell in $N^{-1}$) Konvergenz liefert (BCDPW), welches wir in unserer Notation formulieren (ohne Beweis).
 	\end{itemize}
 \end{bem}
@@ -2632,7 +2632,7 @@ Damit folgt gewünschte Schranke für Ausgabefehler:
 
 Sei $\partial \Omega = \Gamma_D \cup \Gamma_N$ mit $\Gamma_N \neq \emptyset$ Neumann Rand, $g_N: \Gamma_N \rightarrow \R$ Neumann RW.
 
-Für $v \in H_{\Gamma_D}^1 (\Omega(\mu))$ lautet $(P(\mu))$ rechts:
+Für $v \in H_{\Gamma_D}^1 (\Omega(\mu))$ lautet $\prob$ rechts:
 \[
 	f(v;\mu) = \int\limits_{\Gamma_N} g_N v
 \]
